unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/PagesApi__Community_Group_Member__c.object-meta.xml
<CustomObject>
    <description>Junction object which would connect groups or contacts or accounts to different groups.</description>
    <label>Community Group Member</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Community Group Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>