unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Account__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the group member to an Account record.</description>
    <inlineHelpText>Defines the group member to an Account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Group Members</relationshipLabel>
    <relationshipName>Community_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>