unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Activated_Date__c</fullName>
    <description>Defaults to today&#39;s date when no value is populated on record insert.</description>
    <inlineHelpText>Defaults to today&#39;s date when no value is populated on record insert.</inlineHelpText>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>