unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Bio__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Bio__c</fullName>
    <description>Description of the group member.</description>
    <inlineHelpText>Description of the group member.</inlineHelpText>
    <label>Bio</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>