unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Chatter_Group_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Chatter_Group_Member_Id__c</fullName>
    <description>DO NOT UPDATE. The ID in this field links the group member to a chatter group member.  For groups with the contact member entity type only.</description>
    <inlineHelpText>DO NOT UPDATE. The ID in this field links the group member to a chatter group member.  For groups with the contact member entity type only.</inlineHelpText>
    <label>Chatter Group Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>