unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Community_Group__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Community_Group__c</fullName>
    <description>The group under which all the members are linked.</description>
    <inlineHelpText>The group under which all the members are linked.</inlineHelpText>
    <label>Community Group</label>
    <referenceTo>PagesApi__Community_Group__c</referenceTo>
    <relationshipLabel>Community Group Members</relationshipLabel>
    <relationshipName>Community_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>