unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the group member to a Contact record.</description>
    <inlineHelpText>Defines the group member to a Contact record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Group Members</relationshipLabel>
    <relationshipName>Community_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>