unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Deactivated_Date__c</fullName>
    <description>The group member deactivation date.</description>
    <inlineHelpText>The group member deactivation date.</inlineHelpText>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>