unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Display_In_Directory__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_In_Directory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows group member to appear in search results when displaying group list views in the portal. Defaults checked if Is Active is checked.</description>
    <inlineHelpText>Allows group member to appear in search results when displaying group list views in the portal. Defaults checked if Is Active is checked.</inlineHelpText>
    <label>Display In Directory</label>
    <type>Checkbox</type>
</CustomField>