unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_Name__c</fullName>
    <description>The name of the Group Member as you would like it to display when published to customers.</description>
    <inlineHelpText>The name of the Group Member as you would like it to display when published to customers</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>