unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Email__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Email__c</fullName>
    <description>The group member&#39;s email.</description>
    <inlineHelpText>The group member&#39;s email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>