unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Image_URL__c</fullName>
    <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/placeholders/item.png&quot;</defaultValue>
    <description>URL for the group member&#39;s image or photo.</description>
    <inlineHelpText>URL for the group member&#39;s image or photo.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>