unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select whether the group member is active. Defaults checked.</description>
    <inlineHelpText>Select whether the group member is active. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>