unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Is_Active_User__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Active_User__c</fullName>
    <description>Identifies an active user related to the group member.</description>
    <formula>PagesApi__User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies an active user related to the group member.</inlineHelpText>
    <label>Is Active User</label>
    <type>Checkbox</type>
</CustomField>