unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select whether the group member is allowed to manage the group. Defaults unchecked.</description>
    <inlineHelpText>Select whether the group member is allowed to manage the group. Defaults unchecked.</inlineHelpText>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>