unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Join_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Join_Request_Date__c</fullName>
    <description>The date that the group member requested to join a private group.</description>
    <inlineHelpText>The date that the group member requested to join a private group.</inlineHelpText>
    <label>Join Request Date</label>
    <type>Date</type>
</CustomField>