unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Linked_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Linked_Community_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the group member that is a part of a collection of groups.</description>
    <inlineHelpText>Defines the group member that is a part of a collection of groups.</inlineHelpText>
    <label>Linked Community Group</label>
    <referenceTo>PagesApi__Community_Group__c</referenceTo>
    <relationshipLabel>Community Group Members (Linked Community Group)</relationshipLabel>
    <relationshipName>Community_Group_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>