unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Role__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Role__c</fullName>
    <description>Role of the group member in the group.</description>
    <inlineHelpText>Role of the group member in the group.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>