unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__Status__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Status__c</fullName>
    <description>Status of the group member record:
1. Request Submitted - group member has requested to join a private group.
2. Active - group member has been added to a group.
3. Request Declined - group member has been rejected upon request to join a private group.
4. Deactivated - group member has been deactivated.</description>
    <inlineHelpText>Status of the group member record:
1. Request Submitted - requested to join a private group.
2. Active - added to a group.
3. Request Declined - rejected upon request to join a private group.
4. Deactivated - deactivated.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Submitted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Request Declined</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>