unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/fields/PagesApi__User__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines a relationship to a contact&#39;s related community user record. CANNOT BE UPDATED.</description>
    <inlineHelpText>Defines a relationship to a contact&#39;s related community user record. CANNOT BE UPDATED.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>