unpackaged/main/default/objects/PagesApi__Community_Group_Member__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>